--- a/caravan/style.css
+++ b/caravan/style.css
@@ -35,19 +35,30 @@ header .heading {
 .main-visual {
 	width: 100%;
 	height: 300px;
-	background-color: orange;
+	background-image: url(img/mv.jpg);
+	background-size: cover;  /* 縦横比を維持し背景領域を埋め尽くして表示 */
+	background-position: center;  /* 画像の表示位置 */
 }
 
 .main-visual-content {
-	width: 350px;
+	width: 40%;
 	height: 300px;
-	background-color: gold;
+	background-color: rgba(0, 0, 0, 0.5);
+	text-align: center;
+	padding-top: 105px;
+}
+
+.main-visual-text {
+	color: #fff;
+}
+
+.main-visual-name {
+	color: #fff;
+	margin-top: 30px;
 }
 
 .main {
 	width: 840px;
-	/*height: 1400px;*/
-	/*background-color: green;*/
 	display: flex;
 	justify-content: center;
 	margin: 0 auto;
